editors/tree-sitter-halka/grammar.js
    source_file: ($) => repeat($._statement),

    // ---- trivia ----------------------------------------------------------

    line_comment: (_) => token(seq("#", /[^\n]*/)),
    block_comment: (_) => token(seq("###", /[^#]*(#[^#][^#]*)*/, "###")),
    _statement: ($) =>
      choice(
        $.function_declaration,
        $.struct_declaration,
        $.enum_declaration,
        $.trait_declaration,
        $.implements_declaration,
        $.type_alias,
        $.capability_declaration,
        $.import_statement,
        $.from_import_statement,
        $.export_statement,
        $.let_statement,
        $.assignment,
        $.if_statement,
        $.for_statement,
        $.while_statement,
        $.match_statement,
        $.with_statement,
        $.parallel_statement,
        $.unsafe_statement,
        $.generate_declaration,
        $.specialize_declaration,
        $.extern_declaration,
        $.defer_statement,
        $.say_statement,
        $.give_statement,
        $.break_statement,
        $.continue_statement,
        $.channel_statement,
        $.expression_statement,
        $._newline,
      ),

    _end: ($) => seq(optional(","), $._newline),

    _block: ($) => seq(optional(","), optional(":"), $._newline, $._indent, repeat1($._statement), $._dedent),

    // ---- declarations ----------------------------------------------------

    function_declaration: ($) =>
      seq(
        optional(field("marker", choice("macro", "compile", "kernel", "callback", "device"))),
        field("name", $.identifier),
        optional(field("generics", $.type_parameters)),
        field("parameters", $.parameter_list),
        optional(seq(":", field("return_type", $._type))),
        optional(seq("requires", commaSep1(field("capability", $.capability_path)))),
        choice(field("body", $._block), $._end),
      ),

    parameter_list: ($) => seq("(", optional(commaSep(choice($.parameter, "..."))), optional(","), ")"),

    parameter: ($) =>
      seq(
        field("name", $.identifier),
        optional(seq(":", optional("..."), field("type", $._type))),
        optional(seq(":", field("default", $._expression))),
      ),

    let_statement: ($) =>
      seq(
        choice("let", "const"),
        field("pattern", $.pattern),
        optional(seq(":", optional(field("type", $._type)), optional(seq(":", field("value", $._expression))))),
        optional(seq(":", field("value", $._expression))),
        choice($._end, $._record_block),
      ),

    _record_block: ($) => seq($._newline, $._indent, repeat1($._statement), $._dedent),

    say_statement: ($) => seq("say", optional(commaSep1($._expression)), $._end),
    give_statement: ($) => seq("give", optional($._expression), $._end),
    if_statement: ($) =>
      seq(
        "if",
        field("condition", $._expression),
        field("consequence", $._block),
        repeat(field("alternative", $.else_if_clause)),
        optional(field("alternative", $.else_clause)),
      ),

    else_clause: ($) => seq(optional(","), "else", $._block),

    pattern: ($) =>
      choice($.identifier, $.type_identifier, "_", $.rest_pattern, $.tuple_pattern, $.list_pattern, $.variant_pattern, $.struct_pattern, $._literal, "null"),

    _type: ($) => choice($.primitive_type, $.generic_type, $.optional_type, $.reference_type, $.raw_pointer_type, $.tuple_type, $.type_identifier, $.identifier),

    primitive_type: (_) =>
      choice("int", "uint", "float", "byte", "bool", "string", "char", "void",
        "int8", "int16", "int32", "int64", "uint8", "uint16", "uint32", "uint64", "float32", "float64", "double"),

    _expression: ($) =>
      choice(
        $.binary_expression,
        $.unary_expression,
        $.cast_expression,
        $.is_expression,
        $.range_expression,
        $.keyword_expression,
        $.apply_expression,
        $.primary_expression,
      ),

    primary_expression: ($) =>
      choice(
        $.call_expression,
        $.member_expression,
        $.index_expression,
        $.slice_expression,
        $.parenthesized_expression,
        $.tuple_expression,
        $.list_expression,
        $.map_expression,
        $.set_expression,
        $.identifier,
        $.type_identifier,
        $._literal,
      ),

    binary_expression: ($) =>
      choice(
        ...[
          ["or", PREC.or],
          ["and", PREC.and],
          ["==", PREC.compare], ["!=", PREC.compare],
          ["<", PREC.compare], ["<=", PREC.compare], [">", PREC.compare], [">=", PREC.compare],
          ["+", PREC.add], ["-", PREC.add],
          ["*", PREC.mul], ["/", PREC.mul], ["%", PREC.mul],
        ].map(([op, p]) =>
          prec.left(p, seq(field("left", $._expression), field("operator", op), field("right", $._expression))),
        ),
      ),

    _literal: ($) => choice($.integer, $.float, $.string, $.raw_string, $.character, $.boolean, $.null, $.nothing),

    integer: (_) => token(choice(/0[xX][0-9a-fA-F_]+/, /0[bB][01_]+/, /0[oO][0-7_]+/, /[0-9][0-9_]*/)),
    string: ($) => choice($._triple_string, $._single_string),
    _triple_string: ($) => seq('"""', repeat(choice($.interpolation, $.escape_sequence, $.string_fragment_multi)), '"""'),
    _single_string: ($) => seq('"', repeat(choice($.interpolation, $.escape_sequence, $.string_fragment)), '"'),
    string_fragment: (_) => token.immediate(prec(1, /[^"\\{}\n]+/)),
    identifier: (_) => /[a-z_][a-zA-Z0-9_]*/,
